[project]
name = "rdfnav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.1.4",
]

[project.scripts]
rdfnav = "rdfnav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
